--- a/bigdata-tydic1/src/main/resources/db-conf.properties
+++ b/bigdata-tydic1/src/main/resources/db-conf.properties
@@ -1,6 +1,6 @@
 hive.pool.maxsize=20
 hive.pool.minsize=3
-##mysql mysql
+##mysql mysql mysql
 db.mysql.driver=com.mysql.jdbc.Driver
 db.mysql.eom.usr=root
 db.mysql.eom.pwd=admin123
